--- a/src/templates/project.module.scss
+++ b/src/templates/project.module.scss
@@ -35,3 +35,11 @@
         color: #5f5f5f;
     }
 }
+.projectInfo{
+    *{
+        padding-top: 1rem;
+    }
+    p {
+        line-height: 1.7;
+    }
+}
